# solace

./: README.md  docker-compose.yml
.github/workflows/: azure-static-web-apps-proud-grass-09ddc1400.yml  backend-ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: assessment.py  auth.py  database.py  email_utils.py  main.py  models.py  reports.py
backend/app/routes/: assessment.py  auth.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx-spa.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Nav.jsx  ThemeToggle.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Assessment.jsx  Auth.jsx  Home.jsx  Landing.jsx  Result.jsx
